build: replace java container with slim debian + custom JRE build